# octowiz-v1.1

./: .env.example  .gitignore  .version-bump.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYING.md  Makefile  README.md  eslint.config.mjs  import_litellm_memories.py  index.js  litellm_agent_memories_matt_pocock_ai_coding.json  litellm_agent_memories_matt_pocock_ai_coding.jsonl  octowiz-marketplace-manifest.json  octowiz_cache.py  octowiz_cache_cli.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-sandbox-image.yml  marketplace-sync.yml  release.yml  test.yml
.octowiz/: events.jsonl  state.json
apps/a2a-agent/: a2a.py  auth.py  card.py  dispatch.py  execution_policy.py  main.py  managed_agents_config.py  managed_agents_orchestrator.py  managed_agents_setup.py  path_guard.py  requirements.txt  session_owners.py  workflow_run_client.py
apps/claude_code_bridge/: bridge.py
apps/doctowiz/: index.js
containers/sandcastle/: Dockerfile  README.md
docs/: Claude Managed Agents overview.md  Manage multiple agents with agent view.md  Octowiz Engineering Runtime Plan v1.md  Rollenmodell.md  Scaling Managed Agents-Decoupling the brain from the hands.md  aelli-mlx-lab.md  engineering-state-model.md  implementation-plan-stages-3-4-5.md  product-review-v1.1.md  ÆLLI Architecture Vision v1.md
docs/adr/: 0001-regulated-data-must-not-flow-through-hosted-managed-agent-paths.md  0002-keyboard-hud-notifier.md  sandcastle-investigation-2026-06-04.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
hooks/: bridge.py  hooks.json  octowiz-statusline.sh  upgrade-check.sh
providers/: protocol.py
skills/: registry.json
src/: a2a-client.js  a2a-response.js  a2a-transport.js  config.js  daemon.js  event-builder.js  git-context.js  logger.js  policy.js  session-owners.js  session-subscriber.js  session.js  task-queue-client.js  validation.js
src/runtimes/: cli.js  (+9 more)
tests/: a2a-client.test.js  a2a-response.test.js  a2a-transport.test.js  config.test.js  daemon.test.js  enforce.test.js  git-context-parsing.test.js  git-context.test.js  hooks-report-event.test.js  hooks-start-a2a.test.js  hooks-start.test.js  hooks-stop.test.js  package-contents.test.js  policy.test.js  session-subscriber.test.js  session.test.js  test_dispatch_integration.py  test_importer.py  test_octowiz_cache.py  test_seed.py  validation.test.js
workflows/: integra-audit.js  integra-migration.js
(+150 files in other folders)
