[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "octowiz"
version = "0.1.0"
description = "Octowiz Engineering Agent — Claude Code adapter, A2A bridge, and execution coordinator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "providers*"]

[project.scripts]
octowiz-cache = "packages.memory_client.cli:main"

[tool.pytest.ini_options]
testpaths = ["packages", "providers", "tests"]
