[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "octowiz"
version = "0.9.19"
description = "Octowiz Engineering Agent — Claude Code plugin, memory cache, and workflow CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "providers*"]

[project.scripts]
octowiz-cache = "packages.memory_client.cli:main"

[tool.pytest.ini_options]
testpaths = ["packages", "providers", "tests", "apps/claude_code_bridge"]
