[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "octowiz"
version = "1.1.0a1"
description = "Octowiz engineering control plane, memory cache, and workflow CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "anthropic",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# AULA S75 Pro keyboard HUD sink (packages/keyboard_hud). Optional — the bridge only imports
# these inside a detached process when OCTOWIZ_KEYBOARD is enabled.
keyboard = ["hidapi", "Pillow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "providers*"]

[project.scripts]
octowiz-cache = "packages.memory_client.cli:main"

[tool.pytest.ini_options]
testpaths = ["packages", "providers", "tests", "apps/claude_code_bridge"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning:fastapi\\.testclient",
]
